# quanXAI

./: .env.example  .gitignore  Dockerfile  Instruction.md  README.md  docker-compose.yml  pyproject.toml
architecture/: 1.ARCHITECTURE.md  2.AGENT.md  3.PIPELINE.md  4.API.md  5.LOADTEST.MD  6.EVALUATION.MD  7.TEST.md
data/: products_catalog.csv
eval/: EVALUATION_REPORT.md  __init__.py  generate_report.py  generate_test_data.py  test_agent_evaluation.py
eval/datasets/: golden_dataset.json
load_tests/: locustfile.py
src/: __init__.py
src/application/: __init__.py
src/application/agent/: __init__.py  graph.py  state.py
src/application/agent/agents/: __init__.py  market_analysis.py  planner.py  product_qa.py
src/application/agent/prompts/: __init__.py  market_analysis.py  planner.py  (+1 more)
src/application/api/: __init__.py  dependencies.py  main.py  schemas.py
src/application/database/: __init__.py  models.py  repository.py
src/application/pipeline/: __init__.py  embedder.py  ingester.py  loader.py
src/application/vector_store/: __init__.py  repository.py
src/cli/: __init__.py  ingest.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py  entities.py  exceptions.py  logger.py  ports.py
src/infrastructure/: __init__.py
src/infrastructure/llm/: __init__.py  openai.py
src/infrastructure/milvus/: __init__.py  client.py  schema.py
src/infrastructure/openai/: __init__.py  embeddings.py
src/infrastructure/search/: __init__.py  tavily.py
tests/: conftest.py
tests/integration/: test_agent_flow.py
tests/unit/: test_tools.py
(+11 files in other folders)
