[project]
name = "quanxai"
version = "0.1.0"
description = "AI-powered Product Research Assistant for e-commerce"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # LangChain (for CSVLoader)
    "langchain-community>=0.3.0",
    
    # Vector Database (Milvus Lite - no Docker needed)
    "pymilvus[milvus_lite]>=2.5.0",
    
    # LLM & Embeddings
    "openai>=1.0.0",
    
    # Web Search
    "langchain-tavily>=0.1.0",
    
    # API
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    
    # Database (SQLite - no Docker needed)
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",  # SQLite async driver
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    
    # LangGraph (Agent Framework)
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
test = [
    "locust>=2.20.0",
]
eval = [
    "deepeval>=1.3.0",
    "pytest-json-report>=1.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "locust>=2.20.0",
    "deepeval>=1.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
